:bug: Catnip: Fix cropped argument fields

--- a/src/styl/tags/shared/scriptables/catnip-block.styl
+++ b/src/styl/tags/shared/scriptables/catnip-block.styl
@@ -97,7 +97,7 @@ catnip-block, .catnip-block
         padding 0.1rem 0.25rem 0.1rem 0.5rem !important
         flex 0 0 auto
         width max-content
-        box-sizing border-box
+        box-sizing content-box
         & > svg
             width 1rem
             height @width
